# bachelor-thesis-project

./: LICENSE  README.md  pyproject.toml
docs/: bachelor-thesis-project.pptx
routing/: entities.py
src/: algos.py  main.py  vis.py
