[tool.poetry]
name = "shimoda-ieice-trans2025"
version = "0.1.0"
description = ""
authors = ["shimoshida <moshimoshimoshida@gmail.com>"]
readme = "README.md"
packages = [{include = "shimoda_ieice_trans2025"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
matplotlib = "^3.9.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
